--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <script src="app.js"></script>
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
-    <div ng-repeat="post in posts">
-        {{post}}
+    <div ng-repeat="post in posts | orderBy: '-upvotes'">
+        {{post.title}} - upvotes: {{post.upvotes}}
     </div>
   </body>
 </html>
