--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,11 @@
     <div ng-repeat="post in posts | orderBy: '-upvotes'">
         {{post.title}} - upvotes: {{post.upvotes}}
     </div>
+    <button ng-click="addPost()">Post</button>
+    <form ng-submit="addPost()">
+      <input type="text" ng-model="title"></input>
+      <button type="submit">Post</button>
+    </form>
+
   </body>
 </html>
