--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,25 @@
 <html>
   <head>
     <title>My Angular App!</title>
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="app.js"></script>
+    <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
-    <div ng-repeat="post in posts | orderBy: '-upvotes'">
-        {{post.title}} - upvotes: {{post.upvotes}}
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+
+        <div class="page-header">
+          <h1>Flapper News</h1>
+        </div>
+        <div ng-repeat="post in posts | orderBy: '-upvotes'">
+          <span ng-click="incrementUpvotes(post)">^</span>
+          {{post.title}} - upvotes: {{post.upvotes}}
+        </div>
+      </div>
     </div>
-    <button ng-click="addPost()">Post</button>
     <form ng-submit="addPost()">
       <input type="text" ng-model="title"></input>
       <button type="submit">Post</button>
