--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                         </p>
 
                         <div ng-repeat="post in posts">
-                          {{post}}
+                          {{post.title}} - upvotes: {{post.upvotes}}
                         </div>
 
                         <ol>
