--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,61 @@
-<html>
+<!doctype html>
+
+<html ng-app="scotchTodo">
 
 <head>
-    <title>My Angular App!</title>
+    <title>Node/Angular Todo App</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        html                    { overflow-y:scroll; }
+        body                    { padding-top:50px; }
+        #todo-list              { margin-bottom:30px; }
+    </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
 
-<body ng-app="flapperNews" ng-controller="MainCtrl">
-    <div class="row">
+<body ng-controller="mainController">
+  <div class="container">
+
+      <!-- HEADER AND TODO COUNT -->
+      <div class="jumbotron text-center">
+          <h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
+      </div>
+
+      <!-- TODO LIST -->
+      <div id="todo-list" class="row">
+          <div class="col-sm-4 col-sm-offset-4">
+
+              <!-- LOOP OVER THE TODOS IN $scope.todos -->
+              <div class="checkbox" ng-repeat="todo in todos">
+                  <label>
+                      <input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
+                  </label>
+              </div>
+
+          </div>
+      </div>
+
+      <!-- FORM TO CREATE TODOS -->
+      <div id="todo-form" class="row">
+          <div class="col-sm-8 col-sm-offset-2 text-center">
+              <form>
+                  <div class="form-group">
+
+                      <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
+                      <input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy that will love me forever" ng-model="formData.text">
+                  </div>
+
+                  <!-- createToDo() WILL CREATE NEW TODOS -->
+                  <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+              </form>
+          </div>
+      </div>
+
+  </div>
+
+  <div class="row">
         <section class='container'>
             <hgroup>
                 <h1>Hello World! Welcome to your MEAN application on Digital Garage</h1>
@@ -25,10 +71,6 @@
                             The source code for this application is available to be forked from the <a href="https://www.github.com/thedigitalgarage/mean-ex">Digital Garage GitHub repository</a>. You can configure a webhook in your repository to make Digital Garage
                             automatically start a build whenever you push your code:
                         </p>
-
-                        <div ng-repeat="post in posts">
-                          {{post.title}} - upvotes: {{post.upvotes}}
-                        </div>
 
                         <ol>
                             <li>From the Web Console homepage, navigate to your project</li>
