--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
     <script src="app.js"></script>
 </head>
 
