--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     <script src="core.js"></script>
 
 </head>
-<!-- SET THE CONTROLLER AND GET ALL TODOS -->
+<!-- SET THE CONTROLLER AND GET ALL TASKS -->
 <body ng-app="helloWorld" ng-controller="MainCtrl">
   <div>
-    {{test}}
+    <h1> {{test}} </h1>
   </div>
 </body>
 </html>
