--- a/public/index.html
+++ b/public/index.html
@@ -56,12 +56,10 @@
                     <h3>Working in your local Git repository</h3>
                     <p>If you forked the application from the Digital Garage GitHub example, you'll need to manually clone the repository to your local system. Copy the application's source code Git URL and then run:</p>
                     <pre>$ git clone &lt;git_url&gt; &lt;directory_to_create&gt;
-                          # Within your project directory
-                          # Commit your changes and push to Digital Garage
-
-                          $ git commit -a -m 'Some commit message'
-                          $ git push
-                    </pre>
+                      # Within your project directory
+                      # Commit your changes and push to Digital Garage
+                      $ git commit -a -m 'Some commit message'
+                      $ git push</pre>
                     <p>After pushing changes, you'll need to manually trigger a build if you did not setup a webhook as described above.</p>
                 </section>
             </section>
